SimpLanPlus/Tests/test7.txt
{
	^int u = new int;
	void f(^int x, int n){ 
		if (n == 0) { 
			print x^; 
			delete x ; 
		}
		else { 
			^int y = new int; 
			y^ = x^ * n; 
			f(y,n-1); 
		}	
	}
	u^ = 1;
	f(u,6) ;
}

//Type checking ok! Type of the program is: void
//Code generated! Assembling and running generated code.
//You had: 0 lexical errors and 0 syntax errors.
//Starting Virtual Machine...
//720
